--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@ body, html {
      <span class="w3-xxlarge w3-text-white w3-wide">Services</span>
   </div>
 </div>
-  <div id="">
+  <div id="inner">
   <!--<p class="w3-large w3-center w3-padding-16">Im really good at:</p>-->
   <h3 class="w3-narrower"><i class="fa fa-camera"></i>Wedding photographer</h3>
   <p>Our staff provides professional photography and videography services	to give you immaculate photographs and videos so that in the years to	come, you can relive the moments of your wedding day as if they just happened.</p>
