--- a/about.html
+++ b/about.html
@@ -58,10 +58,10 @@ body, html {
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1600px) {
-    .bgimg-1, .bgimg-2, .bgimg-3, #inner {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
         background-attachment: scroll;
         min-height: 400px;
-	width:100%;
+	
     }
 }
 </style>
